HelloUltraviolet/Fixtures/RejectedSource/Expressions/TransmuteUnsafe/Expected.uv
//! Expected diagnostic metadata for the TransmuteUnsafe rejected-source specimen.

expectedDiagnostic("E-MEM-3030", "rule.16.Transmute-Unsafe-Err")
